--- a/scss/_03_priority_nav.scss
+++ b/scss/_03_priority_nav.scss
@@ -42,9 +42,11 @@
   }
   &-is-visible{
     visibility: visible;
+    display: inline-block;
   }
   &-is-hidden{
     visibility: hidden;
+    display: none!important;
   }
 }
 
